--- a/contact.css
+++ b/contact.css
@@ -9,6 +9,13 @@
     
 }
 input
+.legs{
+    position: relative;
+    width: 100%;
+    background: #d4a1fe;
+    min-height: 203px;
+    margin-top: 5px;
+}
 .cont .cont{
     min-height: 80px;
     text-align: center;
