--- a/index.css
+++ b/index.css
@@ -228,3 +228,53 @@ width: 1250px;
     font-family: 'Nanum Myeongjo' , serif;
  }
 }
+
+.leg{
+    position: relative;
+    width: 100%;
+    background: #d4a1fe;
+    min-height: 203px;
+    padding: 20px, 50px;
+}
+.contfom{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -15px;
+}
+.contfom .continfo{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.contfom .continfo .boxi{
+    position: relative;
+    padding: 20px;
+    display: flex;
+}
+.iconic{
+    min-width: 60px;
+    height: 60px;
+    background: #fff;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50% ;
+    font-size: 22px;
+}
+.texas{
+    display: flex;
+    margin-left: 20px;
+    font-size: 16px;
+    color: black;
+    flex-direction: column;
+    font-weight: 300;
+    margin-top: 10px;
+}
+.texas h3{
+color: #000000;
+    font-weight: 500;
+}
