--- a/contact.css
+++ b/contact.css
@@ -8,13 +8,12 @@
     flex-direction: column;
     
 }
-input
 .legs{
     position: relative;
     width: 100%;
     background: #d4a1fe;
     min-height: 203px;
-    margin-top: 5px;
+   margin-top: 336px;
 }
 .cont .cont{
     min-height: 80px;
@@ -36,13 +35,14 @@ input
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    margin-top: -15px;
 }
 .contfom .continfo{
     width: 100%;
     height: 10%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 .contfom .continfo .boxi{
     position: relative;
@@ -85,9 +85,9 @@ color: #000000;
 .formm{
    width: 250px;
    height: 300px;
-   position: absolute;
-   top: 340px;
-   left: 870px;
+   position: relative;
+   top: 77px;
+   left: 474px;
    border-radius: 10px;
     padding: 25px;
 background:linear-gradient(to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%) ;
