--- a/index.css
+++ b/index.css
@@ -236,26 +236,26 @@ width: 1250px;
     min-height: 203px;
     padding: 20px, 50px;
 }
-.contfom{
+.contfoms{
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: -15px;
 }
-.contfom .continfo{
+.contfoms .continfos{
     width: 100%;
     height: 10%;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
-.contfom .continfo .boxi{
+.contfoms .continfos .boxis{
     position: relative;
     padding: 20px;
     display: flex;
 }
-.iconic{
+.iconics{
     min-width: 60px;
     height: 60px;
     background: #fff;
@@ -265,7 +265,7 @@ width: 1250px;
     border-radius: 50% ;
     font-size: 22px;
 }
-.texas{
+.texass{
     display: flex;
     margin-left: 20px;
     font-size: 16px;
@@ -274,7 +274,17 @@ width: 1250px;
     font-weight: 300;
     margin-top: 10px;
 }
-.texas h3{
+.texass h3{
 color: #000000;
     font-weight: 500;
+}
+.footnave{
+    padding: 10px, 5px;
+    margin-top: 0px;
+    padding: 0px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.last ul a{
+    text-decoration: line-through;
 }
