--- a/index.css
+++ b/index.css
@@ -94,13 +94,13 @@ width: 1250px;
     }
     .intro h2{
         position: relative;
-        font-size: 2em;
-        letter-spacing: 7px;
+        font-size: 50px;
+        letter-spacing: 5px;
         
         text-transform: uppercase;
         width: 100%;
         text-align: center;
-        line-height: 0.7em;
+        line-height: 50px;
         animation: animate 5s linear infinite;
         
     }
@@ -138,25 +138,34 @@ width: 1250px;
     .camp {
         display: flex;
         justify-content: center;
-        min-height: 100vh;
+        min-height: 10px;
         align-items: center;    
         font-family: 'Nanum Myeongjo' , serif;
     }
     .intro h3{
         position: relative;
-        font-size: 2em;
-        letter-spacing: 7px;
+        font-size: 50px;
+        letter-spacing: 5px;
         
         text-transform: uppercase;
         width: 100%;
         text-align: center;
-        line-height: 0.7em;
+        line-height: 50px;
         animation: animate 5s linear infinite;
         
     }
-
+    
 }
-
+@media only screen and (max-width:700px){
+    .clicks{
+        background: #ff0000;
+        border-radius: 10px;
+        margin-left: 0px;
+        
+        color: #fff;
+       border-color: #ff0000;
+    }
+}
 
 
 
@@ -190,59 +199,14 @@ width: 1250px;
 }
 @media only screen and (max-width:700px)
 {
-    .ham.active .bar:nth-child(2){
-        opacity: 0;
-    }
-    .ham.active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45dge);
-    }
-    .ham.active .bar:nth-child(1){
-        transform: translateY(-8px) rotate(-45dge);
-    }
-    .nave-lis{
-        position: fixed;
-        left: -100%;
-        top: 70px;
-        gap: 0;
-        flex-direction: column;
-        background-color: #d333a3;
-        width: 100%;
-        text-align: center;
-        transition: 0.3s;
-    }
-    .nave-li{
-        margin: 16px;
-    }
-    .nav-lis.active{
-        left: 0;
-    }
-    .lis li{
-        text-align: center;
-        float: left;
-        display: flex ;
-        justify-content: right;
-        margin-right: 12px;
-        border-radius: 10px;
-        padding: 10px, 5px;
-    }
     
     .nave{
-        display: flex;
-        margin-top: 26px;
-        padding: 0px;
-        justify-content: center;
-        flex-wrap: wrap;
+        display: none;
     }
-    li a{
-        font-weight: bold;
-    border: 13px solid #ff0000;
-    border-radius: 20px;
-    padding: 22px,16px;
-    background-color: #ff0000;
-    color:black;
-    text-decoration: none;
-        
-     }
+    .nave-lis{
+        display: none;
+    }
+    
     }
     @media only screen and (max-width:700px)
     {
