--- a/index.css
+++ b/index.css
@@ -177,7 +177,7 @@ width: 1250px;
  {
     .body{
         width: 500px;;
-        background: url(athi\ org.jpg);
+        background: url(ac.jpg);
         background-size: cover;
         position: center;
     }
