--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,8 @@
+.body{
+    width: 1305px;;
+    background: url(door.jpg);
+    background-size: cover;
+}
 .contam{
     position: relative;
     min-height: 0vh;
@@ -13,19 +18,24 @@
     width: 100%;
     background: #d4a1fe;
     min-height: 203px;
-   margin-top: 336px;
+   margin-top: 190px;
 }
-.cont .cont{
-    min-height: 80px;
+.cont{
+   margin-top: -60px;
     text-align: center;
+    line-height: 15px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
-.contam .cont h2{
+ .cont h2{
     font-size: 36px;
-    font-weight: 500;
+    font-weight: 800;
+    
     color: black;
 }
-.contam .cont p{
+.cont p{
     font-size: 36px;
     font-weight: 500;
     color: black;
@@ -37,14 +47,14 @@
     align-items: center;
     margin-top: -15px;
 }
-.contfom .continfo{
+ .continfo{
     width: 100%;
     height: 10%;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
-.contfom .continfo .boxi{
+.continfo .boxi{
     position: relative;
     padding: 20px;
     display: flex;
@@ -86,7 +96,7 @@ color: #000000;
    width: 250px;
    height: 300px;
    position: relative;
-   top: 77px;
+   top: 25px;
    left: 474px;
    border-radius: 10px;
     padding: 25px;
@@ -105,6 +115,33 @@ background:linear-gradient(to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%) ;
     letter-spacing: 1px;
     font-family:'Nanum Myeongjo' , serif ;
 }
+.formm label{
+    
+    background: transparent;
+    border-bottom:1px solid #fff;
+    border-top: none;
+    border-left: none;
+    border-right:none ;
+    color: #fffdfd;
+    font-size: 20px;
+    letter-spacing: 1px;
+    font-family:'Nanum Myeongjo' , serif ;
+    line-height: 40px;
+}
+.formm textarea{
+    width: 240px;
+    height: 95px;
+    background: transparent;
+    border-bottom:1px solid #fff;
+    border-top: 1px solid #fff;;
+    border-left:1px solid #fff;;
+    border-right:1px solid #fff; ;
+    color: #ffffff;
+    font-size: 20px;
+    letter-spacing: 5px;
+    font-family:'Nanum Myeongjo' , serif ;
+    
+}
 .formm input:focus{
     outline: none;
 }
@@ -121,6 +158,7 @@ background:linear-gradient(to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%) ;
     font-size: 18px;
     border-radius: 10px;
     text-decoration-color: black;
+
 }
 .hi a{
     text-decoration: none;
