upadte many things

--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,6 @@
 .body{
     width: 1305px;;
-    background: url(door.jpg);
+    background: url(wth.jpg);
     background-size: cover;
 }
 .contam{
