--- a/portfolio.css
+++ b/portfolio.css
@@ -5,7 +5,7 @@
 }
 .cass {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     min-height: 100vh;
     align-items: center;    
     font-family: 'Nanum Myeongjo' , serif;
