--- a/contact.css
+++ b/contact.css
@@ -3,6 +3,94 @@
     background: url(wth.jpg);
     background-size: cover;
 }
+@media only screen and (max-width:700px){
+  .body{
+    width: 1305px;;
+    background: url(wth.jpg);
+    background-size: cover;
+}  
+}
+@media only screen and (max-width:700px){
+    .contam{
+        position: relative;
+        min-height: 0vh;
+        padding: 30px 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        
+    }
+    .legs{
+        position: relative;
+        width: 100%;
+        background: #d4a1fe;
+        min-height: 203px;
+       margin-top: 190px;
+    }
+    .cont{
+       margin-top: -60px;
+        text-align: center;
+        line-height: 15px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    
+     .cont h2{
+        font-size: 36px;
+        font-weight: 800;
+        
+        color: black;
+    }
+    .cont p{
+        font-size: 28px;
+        font-weight: 500;
+        color: black;
+    }
+    .contfom{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: -15px;
+    }
+     .continfo{
+        width: 100%;
+        height: 10%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .continfo .boxi{
+        position: relative;
+        padding: 20px;
+        display: flex;
+    }
+    .iconic{
+        min-width: 60px;
+        height: 60px;
+        background: #fff;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50% ;
+        font-size: 22px;
+    }
+    .texas{
+        display: flex;
+        margin-left: 20px;
+        font-size: 16px;
+        color: black;
+        flex-direction: column;
+        font-weight: 300;
+    }
+    .texas h3{
+    color: #000000;
+        font-weight: 500;
+    }
+    
+}
 .contam{
     position: relative;
     min-height: 0vh;
