--- a/index.css
+++ b/index.css
@@ -95,13 +95,13 @@ width: 1056px;
     }
     .intro h2{
         position: relative;
-        font-size: 50px;
-        letter-spacing: 5px;
+        font-size: 18px;
+        letter-spacing: 3px;
         
         text-transform: uppercase;
         width: 100%;
         text-align: center;
-        line-height: 50px;
+        line-height: 0px;
         animation: animate 5s linear infinite;
         
     }
@@ -141,13 +141,13 @@ width: 1056px;
     }
     .intro h3{
         position: relative;
-        font-size: 50px;
-        letter-spacing: 5px;
+        font-size: 18px;
+        letter-spacing: 2px;
         
         text-transform: uppercase;
         width: 100%;
         text-align: center;
-        line-height: 50px;
+        line-height: opx;
         animation: animate 5s linear infinite;
         
     }
@@ -283,4 +283,74 @@ color: #000000;
     margin-left: 500px;
     color: #fff;
    border-color: #ff0000;
+}
+@media only screen and (max-width:700px){
+    .leg{
+        position: relative;
+        width: 109%;
+        background: #d4a1fe;
+        min-height: 203px;
+        padding: 20px, 50px;
+        margin-left: -116px;
+        margin-right: 0px;
+    }
+    .contfoms{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+    .contfoms .continfos{
+        width: 100%;
+        height: 10%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .contfoms .continfos .boxis{
+        position: relative;
+        padding: 20px;
+        display: flex;
+    }
+    .iconics{
+        min-width: 60px;
+        height: 60px;
+        background: #fff;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50% ;
+        font-size: 22px;
+    }
+    .texass{
+        display: flex;
+        margin-left: 20px;
+        font-size: 16px;
+        color: black;
+        flex-direction: column;
+        font-weight: 300;
+        margin-top: 10px;
+    }
+    .texass h3{
+    color: #000000;
+        font-weight: 500;
+    }
+    .footnave{
+        padding: 10px, 5px;
+        margin-top: 0px;
+        padding: 0px;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .last ul a{
+        text-decoration: line-through;
+    }
+    .clicks{
+        background: #ff0000;
+        border-radius: 10px;
+        margin-left: 500px;
+        color: #fff;
+       border-color: #ff0000;
+    }
 }
