--- a/workexperience.css
+++ b/workexperience.css
@@ -6,6 +6,10 @@
      padding: 25px;
  background:linear-gradient(to top, rgba(2, 46, 168, 0.5)50%, rgba(2, 46, 168, 0.5)50%) ;
 }
+.exp h3{
+    position: relative;
+    font-weight: 500;
+}
 
 
 .ints h2{
@@ -13,15 +17,10 @@
      margin: 2px;
      font-weight: 200;
 }
-.ints p{
-   
-     margin: 2px;
-     font-weight: 200;
-}
 .saha{
    position: relative;
-   margin-top: 35px;
-   margin-left: 480px;
+   margin-top: -350px;
+   margin-left: 735px;
 }
 .legas{
     position: relative;
