--- a/contact.css
+++ b/contact.css
@@ -2,15 +2,19 @@
     width: 1305px;;
     background: url(wth.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
+    
 }
 @media only screen and (max-width:700px){
   .body{
     width: 1305px;;
     background: url(wth.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
 }  
 }
-@media only screen and (max-width:700px){
+
+@media only screen and (max-width:400px){
     .contam{
         position: relative;
         min-height: 0vh;
@@ -44,7 +48,7 @@
         color: black;
     }
     .cont p{
-        font-size: 28px;
+        font-size: 36px;
         font-weight: 500;
         color: black;
     }
@@ -90,6 +94,89 @@
         font-weight: 500;
     }
     
+    .input span{
+        position: absolute;
+        left: 0;
+        padding: 5px;
+        font-size: 16px;
+        margin: 10px;
+        pointer-events: none;
+        transition: 1s;
+        color: #666;
+    }
+    .formm{
+       width: 550px;
+       height: 650px;
+       position: relative;
+       top: 25px;
+       left: 474px;
+       border-radius: 10px;
+        padding: 25px;
+    background:linear-gradient(to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%) ;
+    }
+    .formm input{
+        width: 240px;
+        height: 35px;
+        background: transparent;
+        border-bottom:1px solid #fff;
+        border-top: none;
+        border-left: none;
+        border-right:none ;
+        color: #fff;
+        font-size: 15px;
+        letter-spacing: 1px;
+        font-family:'Nanum Myeongjo' , serif ;
+    }
+    .formm label{
+        
+        background: transparent;
+        border-bottom:1px solid #fff;
+        border-top: none;
+        border-left: none;
+        border-right:none ;
+        color: #fffdfd;
+        font-size: 20px;
+        letter-spacing: 1px;
+        font-family:'Nanum Myeongjo' , serif ;
+        line-height: 40px;
+    }
+    .formm textarea{
+        width: 240px;
+        height: 95px;
+        background: transparent;
+        border-bottom:1px solid #fff;
+        border-top: 1px solid #fff;;
+        border-left:1px solid #fff;;
+        border-right:1px solid #fff; ;
+        color: #ffffff;
+        font-size: 20px;
+        letter-spacing: 5px;
+        font-family:'Nanum Myeongjo' , serif ;
+        
+    }
+    .formm input:focus{
+        outline: none;
+    }
+    ::placeholder{
+        color: #fff;
+        font-family:'Nanum Myeongjo' , serif  ;
+    }
+     .hi{
+        width: 240px;
+        height: 40px;
+        background: #fff;
+        border: none;
+        margin-top:30px ;
+        font-size: 18px;
+        border-radius: 10px;
+        text-decoration-color: black;
+    
+    }
+    .hi a{
+        text-decoration: none;
+        color: #000000;
+        font-weight: bold;
+    }
 }
 .contam{
     position: relative;
